[tool.poetry]
name = "py_dev_utils"
version = "0.1.0"
description = ""
authors = ["Jon Thompson <jjt@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
